// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/primitives/Footer.tsx > should render itself & its children - end 1`] = `
<div>
  <style
    data-cmpld="true"
  >
    ._1rjc1b66{padding-block:var(--ds-space-050,4px)}._18zrpxbi{padding-inline:var(--ds-space-200,1pc)}._bfhkysee{background-color:var(--ds-background-accent-gray-subtlest,#f0f1f2)}
  </style>
  <div
    class="_19itglyw _vchhusvi _r06hglyw _1rjc1b66 _18zrpxbi _bfhkysee"
  >
    <div
      class="_1e0c1txw _vchhusvi _1bahh9n0"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`renderer/components/primitives/Footer.tsx > should render itself & its children - space-between 1`] = `
<div>
  <style
    data-cmpld="true"
  >
    ._1rjc1b66{padding-block:var(--ds-space-050,4px)}._18zrpxbi{padding-inline:var(--ds-space-200,1pc)}._bfhkysee{background-color:var(--ds-background-accent-gray-subtlest,#f0f1f2)}
  </style>
  <div
    class="_19itglyw _vchhusvi _r06hglyw _1rjc1b66 _18zrpxbi _bfhkysee"
  >
    <div
      class="_1e0c1txw _vchhusvi _1bah1yb4"
    >
      Test
    </div>
  </div>
</div>
`;
